Warn about shortened filenames before starting the burning.

BUG: 108429

svn path=/branches/stable/extragear/multimedia/k3b/; revision=528555